fix: fix disapperaing element in overflow-y: auto

--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,17 @@ body {
 
 p {
   margin: 0;
-  font-size: 1rem;
+  font-size: clamp(.7rem, 6.5vw, 1rem);
 }
 
 h2 {
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: clamp(1.5rem, 6.5vw, 2.5rem);
 }
 
 h3 {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: clamp(.2rem, 5vw, 2rem);
 }
 
 /* Formularz */
@@ -103,8 +103,16 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.scrollable-wrapper {
   height: 30rem;
+  width: 80%;
   overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .previous-results-item {
